SimpleRobot/ros2_ws/log_user/build_2026-06-26_18-09-01/avs_perception/stderr.log
/home/goln/SimpleSysIDV/ros2_ws/src/avs_perception/src/control_node.cpp: In member function ‘void LaneErrorNode::telemetry_callback(std_msgs::msg::String_<std::allocator<void> >::SharedPtr)’:
/home/goln/SimpleSysIDV/ros2_ws/src/avs_perception/src/control_node.cpp:1168:25: error: ‘geometry_msgs’ has not been declared
 1168 |                         geometry_msgs::msg::Point32 ros_pt;
      |                         ^~~~~~~~~~~~~
/home/goln/SimpleSysIDV/ros2_ws/src/avs_perception/src/control_node.cpp:1169:25: error: ‘ros_pt’ was not declared in this scope
 1169 |                         ros_pt.x = pt.x;
      |                         ^~~~~~
gmake[2]: *** [CMakeFiles/control_node.dir/build.make:76: CMakeFiles/control_node.dir/src/control_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:277: CMakeFiles/control_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
